--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
-name: NewAPI_plugin
-desc: 一个集成了核心用户管理与娱乐功能的New API插件套件，实现了用户绑定、每日签到、额度管理、打劫以及退群自动净化等功能。
-version: v1.1.0
+name: astrbot_plugin_newapi
+display_name: Newapi多功能插件
+desc:astrbot_plugin_newapi是一个为 AstrBot 打造的 QQ 群 ↔ New API 网站联动插件，集 用户绑定、额度经济、群聊互动、管理员工具 于一体，并支持 退群自动解绑与账号净化 的全自动管理套件。
 author: Future-404
-repo: https://github.com/Future-404/astrbot_newapi_plugin.git
+repo: https://github.com/Future-404/astrbot_plugin_newapi
