--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,7 @@
 name: astrbot_plugin_newapi
 display_name: Newapi多功能插件
-desc:astrbot_plugin_newapi是一个为 AstrBot 打造的 QQ 群 ↔ New API 网站联动插件，集 用户绑定、额度经济、群聊互动、管理员工具 于一体，并支持 退群自动解绑与账号净化 的全自动管理套件。
+desc: astrbot_plugin_newapi是一个为 AstrBot 打造的 QQ 群 ↔ New API 网站联动插件，集用户绑定、额度经济、群聊互动、管理员工具 于一体，并支持 退群自动解绑与账号净化 的全自动管理套件。
+author: Future-404
+repo: https://github.com/Future-404/astrbot_plugin_newapi
 author: Future-404
 repo: https://github.com/Future-404/astrbot_plugin_newapi
